task-96131 Fixed button alignment

--- a/dashboard/views/scss/components/_packages.scss
+++ b/dashboard/views/scss/components/_packages.scss
@@ -56,8 +56,6 @@
         }
     }
 
-    &-head {
-    }
     &-body {
         flex: 1;
         .features {
